# muse-for-music

./: .dockerignore  .flaskenv  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.override.yml  docker-compose.yml  install.sh  pylintrc  pyproject.toml  requirements-docker.txt  requirements.txt  requirements_developement.txt  setup.cfg  setup.py  stage2.dockerignore  start_server.sh  tasks.py  uwsgi.ini
.github/workflows/: container.yml
migrations/: env.py
migrations/versions/: 084b2e29df90_.py  084b2e29df90_more_taxonomy_lists.py  08b69a172bb7_.py  08b69a172bb7_add_na_entries.py  08b69a172bb7_drop_other_to_citations.py  2bdc4cdc23a5_specifications.py  38ed909ec074_.py  38ed909ec074_repetition_counts.py  494a304bb471_.py  494a304bb471_non_unique_opus_names.py  563a2aa9584c_.py  563a2aa9584c_drop_tempo_context.py  5d1b25e05af8_.py  5d1b25e05af8_initial.py  6332c52bf469_.py  6332c52bf469_backup_table.py  638ae6935168_.py  638ae6935168_refactor.py  88a8835f8310_.py  88a8835f8310_formal_function_table.py  8df3ac819840_taxonomies_mappings.py  b266a684b744_.py  b37780ea002a_add_numeric_fields.py  bb0693433148_.py  bb0693433148_drop_chord_count.py
muse_for_music/: .angular-cli.json  __init__.py  angular.json  config.py  hal_field.py  package-lock.json  package.json  performance.py  routes.py  tslint.json  util.py  webpack.config.js
muse_for_music/api/: __init__.py  models.py  root.py
muse_for_music/api/data/: __init__.py  backup.py  history.py  instrumentation.py  models.py  opus.py  part.py  people.py  subpart.py  voices.py
muse_for_music/api/endpoints/: test.py
muse_for_music/api/taxonomies/: __init__.py  chords.py  instruments.py  misc.py  models.py
muse_for_music/debug_routes/: __init__.py  debug_db_models.py  debug_taxonomies.py  routes.py
muse_for_music/debug_routes/static/: .gitignore
muse_for_music/debug_routes/templates/debug/: index.html
muse_for_music/e2e/: app.e2e-spec.ts
muse_for_music/models/: __init__.py  helper_classes.py  users.py
muse_for_music/models/data/: __init__.py  ambitus.py  citations.py  composition.py  dramaturgic_context.py  dynamic.py  form.py  harmonics.py  history.py  instrumentation.py  measure.py  opus.py  part.py  people.py  rendition.py  rhythm.py  rythm.py  satz.py  specification_provider.py  specifications.py  subpart.py  tempo.py  voice.py
muse_for_music/models/taxonomies/: __init__.py  ambitus.py  chords.py  citation.py  composition.py  dissonance.py  dynamic.py  epoch.py  form.py  gattung.py  harmonics.py  harmony.py  helper_classes.py  instruments.py  loadable_mixin.py  melody.py  misc.py  notes.py  rendition.py  rhythm.py  rythm.py  satz.py  specifications.py  tempo.py  voices.py
muse_for_music/src/: index.html  styles.scss  tsconfig.spec.json
muse_for_music/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
muse_for_music/src/app/dropdown-tree-button/: dropdown-tree-button.component.spec.ts  dropdown-tree-button.component.ts
muse_for_music/src/app/history/: history.component.ts
muse_for_music/src/app/home/: home.component.html  home.component.ts
muse_for_music/src/app/login/: login.component.html  login.component.ts
muse_for_music/src/app/navigation/: breadcrumbs.component.html  breadcrumbs.component.ts  navigation-service.ts  title-bar.component.html  title-bar.component.ts
muse_for_music/src/app/opuses/: opus-detail.component.html  opus-detail.component.ts  opus-edit.component.html  opus-edit.component.ts  opus-parts.component.html  opus-parts.component.ts  opuses-overview.component.html  opuses-overview.component.ts
muse_for_music/src/app/parts/: part-detail.component.html  part-detail.component.ts  part-edit.component.html  part-edit.component.ts  part-subparts.component.html  part-subparts.component.ts
muse_for_music/src/app/people/: people-overview.component.html  people-overview.component.ts  (+2 more)
muse_for_music/templates/: index.html
muse_for_music/user_api/: __init__.py  administration.py  authentication.py  models.py  root.py
muse_for_music_ui/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.json  tslint.json
muse_for_music_ui/e2e/: app.po.ts
muse_for_music_ui/src/: styles.css
muse_for_music_ui/src/app/: app-routing.module.ts  app.component.html  app.module.ts
taxonomies/: Akkord.csv  AmbitusEinbettung.csv  AmbitusEntwicklung.csv  Ambitusrelation.csv  Anteil.csv  AnzahlMelodietoene.csv  Artikulation.csv  AuftretenSatz.csv  AuftretenWerkausschnitt.csv  Ausdruck.csv  BewegungImTonraum.csv  Dissonanzen.csv  Dissonanzgrad.csv  Epoche.csv  FormaleFunktion.csv  Formschema.csv  Frequenz.csv  Gattung.csv  Gattung2.csv  GattungNew.csv  GattungNineteenthCentury.csv  Grundton.csv  HarmonischeDichte.csv  HarmonischeEntwicklung.csv  HarmonischeFunktion.csv  HarmonischeFunktionVerwandschaft.csv  HarmonischeKomplexitaet.csv  HarmonischePhaenomene.csv  HarmonischeStufe.csv  Instrument.csv  InstrumentierungEinbettungQualitaet.csv  InstrumentierungEinbettungQuantitaet.csv  Instrumentierungsreichtum.csv  Intervall.csv  IntervallWiederholung.csv  Intervallik.csv  Komplexitaet.csv  Lautstaerke.csv  LautstaerkeEinbettung.csv  LautstaerkeEntwicklung.csv  (+44 more)
tests/: conftest.py  hateoas_test.py  rule_based_test.py  util.py
(+186 files in other folders)
