[tool.poetry]
name = "muse_for_music"
version = "0.1.0"
description = "A tool for managing data of historical music."
authors = ["Fabian Bühler"]
#license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
flask = { extras = ["dotenv"], version = "^1.1.2" }
invoke = "^1.4.1"
flask-restx = "0.2.0"
Flask-JWT-Extended = "^3.24.1"
Bcrypt-Flask = "^1.0.1"
Flask-Cors = "^3.0.9"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
flask-babel = "^2.0.0"
Flask-Static-Digest = "^0.1.3"
PyMySQL = "^1.0.2"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.1"
hypothesis = "^6.8.3"
coverage = "^5.5"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.1.4"
Sphinx = "^3.2.1"
tomlkit = "^0.7.0"
recommonmark = "^0.6.0"
sphinxcontrib-redoc = "^1.6.0"
sphinx-click = "^2.5.0"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
line-length = 90
include = '\.pyi?$'

[tool.sphinx]
copyright-year = 2021
enable-autodoc = true
enable-autosectionlabel = true
enable-markdown = true
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = false
# update gitignore if you want to edit docs/readme.md manually!
include-readme = false

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]

[tool.sphinx.recommonmark]
auto-toc-tree-section = "Contents"
enable-math = false
enable-inline-math = false
enable-eval-rst = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
