[tool.poetry]
name = "muse_for_music"
version = "0.3.0"
description = "A tool for managing data of historical music."
authors = ["Fabian Bühler"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = { extras = ["dotenv"], version = "^1.1.2" }
invoke = "^2.0.0"
flask-restx = "0.5.1"
Flask-JWT-Extended = "^3.24.1"
Bcrypt-Flask = "^1.0.1"
Flask-Cors = "^3.0.9"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"
flask-babel = "^2.0.0"
Flask-Static-Digest = "^0.1.3"
PyMySQL = "^1.0.2"
gunicorn = "^23.0.0"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.1"
hypothesis = "^6.8.3"
coverage = "^5.5"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.1.4"
tomlkit = "^0.7.0"

[tool.poetry.scripts]
#flask = 'flask.cli:main'

[tool.black]
line-length = 90
include = '\.pyi?$'

[tool.pytest.ini_options]
pythonpath=[
    ".",
]
testpaths=[
    "tests",
]

[tool.sphinx]
copyright-year = 2021
enable-autodoc = true
enable-autosectionlabel = true
enable-markdown = true
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = false
# update gitignore if you want to edit docs/readme.md manually!
include-readme = false

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
