[tool.poetry]
name = "muse_for_music"
version = "0.3.2"
description = "A tool for managing data of historical music."
authors = ["Fabian Bühler"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = { extras = ["dotenv"], version = "^3.1.3" }
invoke = "^2.2.1"
flask-restx = "^1.3.2"
Flask-JWT-Extended = "^4.7.1"
Bcrypt-Flask = "^1.0.2"
Flask-Cors = "^6.0.2"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.1.0"
flask-babel = "^4.0.0"
Flask-Static-Digest = "^0.4.1"
PyMySQL = "^1.1.2"
gunicorn = "^25.1.0"
typing-extensions = "^4.15.0"


[tool.poetry.group.dev.dependencies]
black = "^26.3.0"
flake8 = "^7.3.0"
pytest = "^9.0.2"
hypothesis = "^6.151.9"
coverage = "^7.13.4"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^25.11.29"
tomlkit = "^0.14.0"


[tool.black]
target-version = ["py310"]
line-length = 90
include = '\.pyi?$'

[tool.pytest.ini_options]
pythonpath=[
    ".",
]
testpaths=[
    "tests",
]

[tool.sphinx]
copyright-year = 2021
theme = "sphinx_rtd_theme"
enable-autodoc = true
enable-napoleon = true
enable-autosectionlabel = true
enable-markdown = true
enable-mermaid = true
enable-todo = true
# update gitignore if you want to edit docs/changelog.md manually!
include-changelog = false
# update gitignore if you want to edit docs/readme.md manually!
include-readme = false
# experimental/unstable feature
python_use_unqualified_type_names = true

[tool.sphinx.intersphinx-mapping]
python = ["https://docs.python.org/3"]

[tool.sphinx.autosectionlabel]
prefix-document = true

[tool.sphinx.mermaid]
d3_zoom = true

[tool.sphinx.myst]
# create anchors for h1 and h2
heading_anchors = 2
# markdown parser; see <https://myst-parser.readthedocs.io/en/latest/syntax/optional.html>
extensions = [
    #"amsmath",
    "colon_fence",
    "deflist",
    "dollarmath",
    "html_admonition",
    "html_image",
    #"linkify", # requires installation of linkify-it-py
    "replacements",
    "smartquotes",
    "substitution",
    "tasklist",
]
# substitutions = {"key": "substitution value"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
